[tool.poetry]
name = "repr-llm"
version = "0.2.0"
description = "Creating lightweight representations of objects for Large Language Model consumption"
authors = ["Kyle Kelley <rgbkrk@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "repr_llm"}]

[tool.poetry.dependencies]
python = "^3.9"
ipython = ">=7.0.0,<9.0.0"
pandas = {version = ">=1.0.0,<3.0.0", optional = true, extras=["numfocus"]}
tabulate = {version = ">=0.8.3,<0.10.0", optional = true, extras=["numfocus"]}
numpy = {version = ">=1.16.0", optional = true, extras=["numfocus"]}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"
mypy = "^1.4.1"
ipykernel = ">=6.0.0,<8.0.0"

[tool.poetry.extras]
numfocus = ["pandas", "numpy"]
dev = ["black", "pytest", "mypy", "ipykernel", "ipython", "tabulate", "pandas", "numpy"]


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
